Chnaged some config files

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -1,4 +1,4 @@
 user-portal.welcome=Welcome to IAM User Store
 user-portal.welcome.msg=Mange your user profile
 user-portal.user.add=Self sign-up
-
+user-portal.user.account.setting=Account Settings
