--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -1,5 +1,6 @@
 user-portal.welcome=Welcome to IAM User Store
 user-portal.welcome.msg=Mange your user profile
+user-portal.user.login=Sign in to your account
 user-portal.user.add=Sign-up
 user-portal.user.password.reset=Reset Password
 
