fixing page links

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -94,6 +94,7 @@ placeholder.email = e.g.user@example.com
 =======
 user-portal.welcome=Welcome to IAM User Store
 user-portal.welcome.msg=Mange your user profile
+user-portal.user.login=Sign in to your account
 user-portal.user.add=Sign-up
 user-portal.user.password.reset=Reset Password
 
