Added tab view to the user portal

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -3,4 +3,4 @@ user-portal.welcome.msg=Mange your user profile
 user-portal.user.login=Sign in to your account
 user-portal.user.add=Sign-up
 user-portal.user.password.reset=Reset Password
-
+user-portal.user.account.setting=Account Settings
