--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -10,3 +10,12 @@ user-portal.user.profile.lastName=Last Name
 user-portal.user.profile.email=Email
 user-portal.user.profile.telephone=Telephone
 user-portal.user.account.setting=Account Settings
+user-portal.user.account.profile=Profile
+user-portal.user.account.profile.default=Default
+user-portal.user.account.profile.salesforce=Salesforce
+user-portal.user.account.profile.twitter=Twitter
+user-portal.user.account.password=Password
+user-portal.user.account.securityQ=Security Question(s)
+user-portal.user.account.association=Associations
+user-portal.user.account.association.local=Local
+user-portal.user.account.association.federated=Federated
