update user portal update password feature

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -3,6 +3,9 @@ user-portal.welcome.msg=Manage your user profile
 user-portal.user.login=Sign in to your account
 user-portal.user.add=Sign-up
 user-portal.user.password.reset=Update Password
+user-portal.user.password.reset.old=Old Password
+user-portal.user.password.reset.new=New Password
+user-portal.user.password.reset.new.confirm=Confirm Password
 user-portal.user.profile=User Profile
 user-portal.user.profile.username=Username
 user-portal.user.profile.firstName=First Name
