--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -23,3 +23,5 @@ user-portal.user.account.securityQ=Security Question(s)
 user-portal.user.account.association=Associations
 user-portal.user.account.association.local=Local
 user-portal.user.account.association.federated=Federated
+user-portal.user.profile.success=Success!
+user-portal.user.profile.failure=Failure!
