--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -25,3 +25,6 @@ user-portal.user.account.association.local=Local
 user-portal.user.account.association.federated=Federated
 user-portal.user.profile.success=Success!
 user-portal.user.profile.failure=Failure!
+
+user-protal.user.account.security.question=Security Question(s)
+user-portal.user.account.security.question.info=In order to change your security question, you should re-enter your password.
