removing the federated login icons

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -1,4 +1,4 @@
-user-portal.welcome=Welcome to IAM User Store
+user-portal.welcome=Welcome to IS User Portal
 user-portal.welcome.msg=Manage your user profile
 user-portal.user.login=Sign in to your account
 user-portal.user.add=Sign-up
