Fixing Home page ux reviews

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -1,4 +1,4 @@
-user-portal.welcome=Welcome to IS User Portal
+user-portal.welcome=Welcome to Identity Server User Portal
 user-portal.welcome.msg=Manage your user profile
 user-portal.user.login=Sign in to your account
 user-portal.user.add=Sign-up
@@ -28,3 +28,7 @@ user-portal.user.profile.failure=Failure!
 user-protal.user.account.security.question=Security Question(s)
 user-portal.user.account.security.question.info=In order to change your security question, you should re-enter your password.
 user-portal.user.signup.error.default = Error in user self sign-up!
+user-portal.footer.content=WSO2 Identity Server v6.0.0
+user-portal.no-applications.header=No Registered Applications Found!
+user-portal.no-applications.body=No applications registered for the User.
+user-portal.applications.breadcumb=Home
