--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -31,4 +31,4 @@ user-portal.user.signup.error.default = Error in user self sign-up!
 user-portal.footer.content=WSO2 Identity Server v6.0.0
 user-portal.no-applications.header=No Registered Applications Found!
 user-portal.no-applications.body=No applications registered for the User.
-user-portal.applications.breadcumb=Home
+user-portal.applications.breadcrumb=Home
