Added UI improvements

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -1,7 +1,8 @@
 user-portal.welcome=Welcome to IS User Portal
 user-portal.welcome.msg=Manage your user profile
 user-portal.user.login=Sign in to your account
-user-portal.user.add=Sign-up
+user-portal.create.account.title=Create account
+user-portal.create.account.sub.title=Please fill in the below form to create an account
 user-portal.user.password.reset=Update Password
 user-portal.user.password.reset.old=Old Password
 user-portal.user.password.reset.new=New Password
