Added localization support for login and signup pages

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -1,13 +1,32 @@
 user-portal.welcome=Welcome to IS User Portal
 user-portal.welcome.msg=Manage your user profile
 user-portal.user.login=Sign in to your account
-user-portal.create.account.title=Create account
-user-portal.create.account.sub.title=Please fill in the below form to create an account
+user-portal.user.login.message=Already have an account?
+user-portal.user.login.title=Sign in
+user-portal.user.login.error.default=Login Error!
+user-portal.user.login.rememberMe=Keep me signed in
+user-portal.user.signup.title=Sign Up
+user-portal.user.signup.sub.title=Please fill in the below form to sign up to user portal
+user-portal.user.signup.message=Don't have an account?
+user-portal.user.signup.error.default= Error in user self sign-up!
+user-portal.user.signup.no.content=No content
+user-portal.user.signup.security.question=Security Question
+user-portal.user.signup.security.question.answer=Answer
+user-portal.user.signup.password=Password
 user-portal.user.password.reset=Update Password
 user-portal.user.password.reset.old=Old Password
 user-portal.user.password.reset.new=New Password
 user-portal.user.password.reset.new.confirm=Confirm Password
+user-portal.user.password.notEntered=Password not entered
+user-portal.user.password.validation.info1=Make your password strong by having
+user-portal.user.password.validation.info2=Atleast 6 characters
+user-portal.user.password.validation.info3=Atleast one number
+user-portal.user.password.validation.info4=Atleast one lowercase
+user-portal.user.password.validation.info5=one uppercase letter
+user-portal.user.password.validation.info6=Atleast one special character
 user-portal.user.profile=User Profile
+user-portal.user.profile.success=Success!
+user-portal.user.profile.failure=Failure!
 user-portal.user.profile.username=Username
 user-portal.user.profile.firstName=First Name
 user-portal.user.profile.lastName=Last Name
@@ -21,11 +40,10 @@ user-portal.user.account.profile.twitter=Twitter
 user-portal.user.account.password=Password
 user-portal.user.account.multiFactor=Multi-factor Authentication
 user-portal.user.account.securityQ=Security Question(s)
+user-protal.user.account.security.question=Security Question(s)
+user-portal.user.account.security.question.info=In order to change your security question, you should re-enter your password.
 user-portal.user.account.association=Associations
 user-portal.user.account.association.local=Local
 user-portal.user.account.association.federated=Federated
-user-portal.user.profile.success=Success!
-user-portal.user.profile.failure=Failure!
-user-protal.user.account.security.question=Security Question(s)
-user-portal.user.account.security.question.info=In order to change your security question, you should re-enter your password.
-user-portal.user.signup.error.default = Error in user self sign-up!
+
+
