--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -45,6 +45,32 @@ user-portal.user.account.security.question.info=In order to change your security
 user-portal.user.account.association=Associations
 user-portal.user.account.association.local=Local
 user-portal.user.account.association.federated=Federated
+user-portal.user.claim.username=User Name
+user-portal.user.claim.fullname=Full Name
+user-portal.user.claim.givenname=First Name
+user-portal.user.claim.lastname=Last Name
+user-portal.user.claim.middlename=Middle Name
+user-portal.user.claim.displayName=Display Name
+user-portal.user.claim.nickname=Nick Name
+user-portal.user.claim.email=Email
+user-portal.user.claim.title=Title
+user-portal.user.claim.gender=Gender
+user-portal.user.claim.dob=Date of birth
+user-portal.user.claim.telephone=Telephone No
+user-portal.user.claim.otherphone=Other Phone No
+user-portal.user.claim.mobile=Mobile No
+user-portal.user.claim.streetaddress=Street Address
+user-portal.user.claim.locality=Locality
+user-portal.user.claim.region=Region
+user-portal.user.claim.postalcode=Postal Code
+user-portal.user.claim.country=Country
+user-portal.user.claim.role=Role
+user-portal.user.claim.organization=Organization
+user-portal.user.claim.resourceType=Resource Type
+user-portal.user.claim.createdDate=Created Date
+user-portal.user.claim.lastModifiedDate=Last Modified Date
+user-portal.user.claim.location=Location
+user-portal.user.claim.version=Version
 user-portal.footer.content=WSO2 Identity Server v6.0.0
 user-portal.no-applications.header=No Registered Applications Found!
 user-portal.no-applications.body=No applications registered for the User.
