--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -13,6 +13,8 @@ user-portal.user.signup.no.content=No content
 user-portal.user.signup.security.question=Security Question
 user-portal.user.signup.security.question.answer=Answer
 user-portal.user.signup.password=Password
+user-portal.user.signup.domain=Domain
+user-portal.user.signup.domain.placeholder=select a user store domain
 user-portal.user.password.reset=Update Password
 user-portal.user.password.reset.old=Old Password
 user-portal.user.password.reset.new=New Password
