add user store domain support in login and update password
Conflicts:
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/reset-password/reset-password.js
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/pages/login.js

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -116,6 +116,7 @@ user-portal.user.login.message=Already have an account?
 user-portal.user.login.title=Sign in
 user-portal.user.login.error.default=Login Error!
 user-portal.user.login.rememberMe=Keep me signed in
+user-portal.user.login.error.invalid.username=You have provided an invalid Username.
 user-portal.user.signup.title=Sign Up
 user-portal.user.signup.sub.title=Please fill in the below form to sign up to user portal
 user-portal.user.signup.message=Don't have an account?
