--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -6,6 +6,7 @@ user-portal.user.login.title=Sign in
 user-portal.user.login.error.default=Login Error!
 user-portal.user.login.rememberMe=Keep me signed in
 user-portal.user.login.error.invalid.username=You have provided an invalid Username.
+user-portal.user.login.error.authentication=Provided user name or password is invalid.
 user-portal.user.signup.title=Sign Up
 user-portal.user.signup.sub.title=Please fill in the below form to sign up to user portal
 user-portal.user.signup.message=Don't have an account?
@@ -16,6 +17,9 @@ user-portal.user.signup.security.question.answer=Answer
 user-portal.user.signup.password=Password
 user-portal.user.signup.domain=Domain
 user-portal.user.signup.domain.placeholder=select a user store domain
+user-portal.user.signup.error.retrieve.claim=Failed to retrieve the claim profile.
+user-portal.user.signup.error.retrieve.domain=Failed to retrieve the domain names.
+user-portal.user.signup.error.registration=User Sign Up failure.
 user-portal.user.password.reset=Update Password
 user-portal.user.password.reset.old=Old Password
 user-portal.user.password.reset.new=New Password
