--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -7,7 +7,7 @@ user-portal.user.login.error.default=Login Error!
 user-portal.user.login.rememberMe=Keep me signed in
 user-portal.user.login.error.invalid.username=You have provided an invalid Username.
 user-portal.user.login.error.authentication=Provided user name or password is invalid.
-user-portal.user.signup.title=Sign Up
+user-portal.user.signup.title=Sign up
 user-portal.user.signup.sub.title=Please fill in the below form to sign up to user portal
 user-portal.user.signup.message=Don't have an account?
 user-portal.user.signup.error.default= Error in user self sign-up!
@@ -52,7 +52,7 @@ user-portal.user.account.security.question.info=In order to change your security
 user-portal.user.account.association=Associations
 user-portal.user.account.association.local=Local
 user-portal.user.account.association.federated=Federated
-user-portal.user.claim.username=User Name
+user-portal.user.claim.username=Username
 user-portal.user.claim.fullname=Full Name
 user-portal.user.claim.givenname=First Name
 user-portal.user.claim.lastname=Last Name
