Fixing https://wso2.org/jira/browse/IDENTITY-5621

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -83,3 +83,7 @@ user-portal.no-applications.header=No Registered Applications Found!
 user-portal.no-applications.body=No applications registered for the User.
 user-portal.applications.breadcrumb=Home
 user-portal.applications.header = Applications
+user-portal.placeholder.username = e.g.johndoe
+user-portal.user.placeholder.givenname = e.g.John
+user-portal.user.placeholder.lastname = e.g.Doe
+user-portal.user.placeholder.email = e.g.user@example.com
