--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -21,7 +21,7 @@ user-portal.user.signup.error.retrieve.claim=Failed to retrieve the claim profil
 user-portal.user.signup.error.retrieve.domain=Failed to retrieve the domain names.
 user-portal.user.signup.error.registration=User Sign Up failure.
 user-portal.user.password.reset=Update Password
-user-portal.user.password.reset.old=Old Password
+user-portal.user.password.reset.old=Current Password
 user-portal.user.password.reset.new=New Password
 user-portal.user.password.reset.new.confirm=Confirm Password
 user-portal.user.password.notEntered=Password not entered
@@ -31,6 +31,8 @@ user-portal.user.password.validation.info3=Atleast one number
 user-portal.user.password.validation.info4=Atleast one lowercase
 user-portal.user.password.validation.info5=one uppercase letter
 user-portal.user.password.validation.info6=Atleast one special character
+user-portal.user.password.info.header=Password required
+user-portal.user.password.info.body= In order to update your password, you must re-enter your current password.
 user-portal.user.profile=User Profile
 user-portal.user.profile.success=Success!
 user-portal.user.profile.failure=Failure!
@@ -46,8 +48,8 @@ user-portal.user.account.profile.salesforce=Salesforce
 user-portal.user.account.profile.twitter=Twitter
 user-portal.user.account.password=Password
 user-portal.user.account.multiFactor=Multi-factor Authentication
-user-portal.user.account.securityQ=Security Question(s)
-user-protal.user.account.security.question=Security Question(s)
+user-portal.user.account.securityQ=Security Questions
+user-protal.user.account.security.question=Security Questions
 user-portal.user.account.security.question.info=In order to change your security question, you should re-enter your password.
 user-portal.user.account.association=Associations
 user-portal.user.account.association.local=Local
@@ -79,8 +81,8 @@ user-portal.user.claim.lastModifiedDate=Last Modified Date
 user-portal.user.claim.location=Location
 user-portal.user.claim.version=Version
 user-portal.footer.content=WSO2 Identity Server v6.0.0
-user-portal.no-applications.header=No Registered Applications Found!
-user-portal.no-applications.body=No applications registered for the User.
+user-portal.no-applications.header=No Applications Found!
+user-portal.no-applications.body=There are no applications registered for the user.
 user-portal.applications.breadcrumb=Home
 user-portal.applications.header = Applications
 user-portal.placeholder.username = e.g.johndoe
