--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -14,6 +14,7 @@ user-portal.user.signup.error.default= Error in user self sign-up!
 user-portal.user.signup.no.content=No content
 user-portal.user.signup.security.question=Security Question
 user-portal.user.signup.security.question.answer=Answer
+user-portal.user.security.question.info.body= In order to update question, you must re-enter your current password.
 user-portal.user.signup.password=Password
 user-portal.user.signup.domain=Domain
 user-portal.user.signup.domain.placeholder=select a user store domain
