Password Recovery Implementation: Initial

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -87,3 +87,24 @@ user-portal.placeholder.username = e.g.johndoe
 user-portal.user.placeholder.givenname = e.g.John
 user-portal.user.placeholder.lastname = e.g.Doe
 user-portal.user.placeholder.email = e.g.user@example.com
+user-portal.user.forgot.password=Forgot Password
+user-portal.user.password.recovery=Recover Password
+user-portal.user.password.recovery.for=Recover Password for
+user-portal.user.password.recovery.error=Password Recovery Error!
+user-portal.user.password.recovery.select.options=Please select a method to recover your password
+user-portal.user.password.recovery.with.email=Recover with e-mail
+user-portal.captcha=Captcha:
+user-portal.recover=Recover
+user-portal.cancel=Cancel
+user-portal.user.question=Question:
+user-portal.user.answer=Answer:
+user-portal.user.next=Next
+user-portal.user.password.recovery.with.security.questions=Recover with security question
+user-portal.user.try.with.another.username=Try with another username
+user-portal.user.enter.your.username=Enter your username
+user-portal.user.multiple.users.found=There are multiple users in the system with the provided username.Please provide domain specific username
+user-portal.user.not.found.for.username=No user is found in the system for the provided username
+user-portal.user.recovery.not.enabled=User Password recovery Options are not enabled. Please contact a system Administrator.
+user-portal.user.something.wrong.error=Sorry, Something Went Wrong. We're working on getting this fixed as soon as we can.
+user-portal.user.page.under.construction=Page Under Construction
+user-portal.user.recovery.email.completed=An Email has been sent to your email address. Please check your inbox.
