--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -1,92 +1,92 @@
-user-portal.welcome=Welcome to Identity Server User Portal
-user-portal.welcome.msg=Manage your user profile
-user-portal.user.login=Sign in to your account
-user-portal.user.login.message=Already have an account?
-user-portal.user.login.title=Sign in
-user-portal.user.login.error.default=Login Error!
-user-portal.user.login.rememberMe=Keep me signed in
-user-portal.user.login.error.invalid.username=You have provided an invalid Username.
-user-portal.user.login.error.authentication=Provided user name or password is invalid.
-user-portal.user.signup.title=Sign up
-user-portal.user.signup.sub.title=Please fill in the below form to sign up to user portal
-user-portal.user.signup.message=Don't have an account?
-user-portal.user.signup.error.default= Error in user self sign-up!
-user-portal.user.signup.no.content=No content
-user-portal.user.signup.security.question=Security Question
-user-portal.user.signup.security.question.answer=Answer
-user-portal.user.security.question.info.body= In order to update question, you must re-enter your current password.
-user-portal.user.signup.password=Password
-user-portal.user.signup.domain=Domain
-user-portal.user.signup.domain.placeholder=select a user store domain
-user-portal.user.signup.error.retrieve.claim=Failed to retrieve the claim profile.
-user-portal.user.signup.error.retrieve.domain=Failed to retrieve the domain names.
-user-portal.user.signup.error.registration=User Sign Up failure.
-user-portal.user.password.reset=Update Password
-user-portal.user.password.reset.old=Current Password
-user-portal.user.password.reset.new=New Password
-user-portal.user.password.reset.new.confirm=Confirm Password
-user-portal.user.password.notEntered=Password not entered
-user-portal.user.password.validation.info1=Make your password strong by having
-user-portal.user.password.validation.info2=Atleast 6 characters
-user-portal.user.password.validation.info3=Atleast one number
-user-portal.user.password.validation.info4=Atleast one lowercase
-user-portal.user.password.validation.info5=one uppercase letter
-user-portal.user.password.validation.info6=Atleast one special character
-user-portal.user.password.info.header=Password required
-user-portal.user.password.info.body= In order to update your password, you must re-enter your current password.
-user-portal.user.profile=User Profile
-user-portal.user.profile.success=Success!
-user-portal.user.profile.failure=Failure!
-user-portal.user.profile.username=Username
-user-portal.user.profile.firstName=First Name
-user-portal.user.profile.lastName=Last Name
-user-portal.user.profile.email=Email
-user-portal.user.profile.telephone=Telephone
-user-portal.user.account.setting=Account Settings
-user-portal.user.account.profile=Profile
-user-portal.user.account.profile.default=Default
-user-portal.user.account.profile.salesforce=Salesforce
-user-portal.user.account.profile.twitter=Twitter
-user-portal.user.account.password=Password
-user-portal.user.account.multiFactor=Multi-factor Authentication
-user-portal.user.account.securityQ=Security Questions
+welcome=Welcome to Identity Server User Portal
+welcome.msg=Manage your user profile
+login=Sign in to your account
+login.message=Already have an account?
+login.title=Sign in
+login.error.default=Login Error!
+login.rememberMe=Keep me signed in
+login.error.invalid.username=You have provided an invalid Username.
+login.error.authentication=Provided user name or password is invalid.
+signup.title=Sign up
+signup.sub.title=Please fill in the below form to sign up to user portal
+signup.message=Don't have an account?
+signup.error.default= Error in user self sign-up!
+signup.no.content=No content
+signup.security.question=Security Question
+signup.security.question.answer=Answer
+security.question.info.body= In order to update question, you must enter your current password.
+signup.password=Password
+signup.domain=Domain
+signup.domain.placeholder=select a user store domain
+signup.error.retrieve.claim=Failed to retrieve the claim profile.
+signup.error.retrieve.domain=Failed to retrieve the domain names.
+signup.error.registration=User Sign Up failure.
+password.reset=Update Password
+password.reset.old=Current Password
+password.reset.new=New Password
+password.reset.new.confirm=Confirm Password
+password.notEntered=Password not entered
+password.validation.info1=Make your password strong by having
+password.validation.info2=Atleast 6 characters
+password.validation.info3=Atleast one number
+password.validation.info4=Atleast one lowercase
+password.validation.info5=one uppercase letter
+password.validation.info6=Atleast one special character
+password.info.header=Password required
+password.info.body= In order to update your password, you must enter your current password.
+profile=User Profile
+profile.success=Success!
+profile.failure=Failure!
+profile.username=Username
+profile.firstName=First Name
+profile.lastName=Last Name
+profile.email=Email
+profile.telephone=Telephone
+account.setting=Account Settings
+account.profile=Profile
+account.profile.default=Default
+account.profile.salesforce=Salesforce
+account.profile.twitter=Twitter
+account.password=Password
+account.multiFactor=Multi-factor Authentication
+account.securityQ=Security Questions
 user-protal.user.account.security.question=Security Questions
-user-portal.user.account.security.question.info=In order to change your security question, you should re-enter your password.
-user-portal.user.account.association=Associations
-user-portal.user.account.association.local=Local
-user-portal.user.account.association.federated=Federated
-user-portal.user.claim.username=Username
-user-portal.user.claim.fullname=Full Name
-user-portal.user.claim.givenname=First Name
-user-portal.user.claim.lastname=Last Name
-user-portal.user.claim.middlename=Middle Name
-user-portal.user.claim.displayName=Display Name
-user-portal.user.claim.nickname=Nick Name
-user-portal.user.claim.email=Email
-user-portal.user.claim.title=Title
-user-portal.user.claim.gender=Gender
-user-portal.user.claim.dob=Date of birth
-user-portal.user.claim.telephone=Telephone No
-user-portal.user.claim.otherphone=Other Phone No
-user-portal.user.claim.mobile=Mobile No
-user-portal.user.claim.streetaddress=Street Address
-user-portal.user.claim.locality=Locality
-user-portal.user.claim.region=Region
-user-portal.user.claim.postalcode=Postal Code
-user-portal.user.claim.country=Country
-user-portal.user.claim.role=Role
-user-portal.user.claim.organization=Organization
-user-portal.user.claim.resourceType=Resource Type
-user-portal.user.claim.createdDate=Created Date
-user-portal.user.claim.lastModifiedDate=Last Modified Date
-user-portal.user.claim.location=Location
-user-portal.user.claim.version=Version
-user-portal.footer.content=WSO2 Identity Server v6.0.0
-user-portal.no-applications.header=No Applications Found!
-user-portal.no-applications.body=There are no applications registered for the user.
-user-portal.applications.breadcrumb=Home
-user-portal.applications.header = Applications
-user-portal.placeholder.username = e.g.johndoe
-user-portal.user.placeholder.givenname = e.g.John
-user-portal.user.placeholder.lastname = e.g.Doe
-user-portal.user.placeholder.email = e.g.user@example.com
+account.security.question.info=In order to change your security question, you should enter your password.
+account.association=Associations
+account.association.local=Local
+account.association.federated=Federated
+claim.username=Username
+claim.fullname=Full Name
+claim.givenname=First Name
+claim.lastname=Last Name
+claim.middlename=Middle Name
+claim.displayName=Display Name
+claim.nickname=Nick Name
+claim.email=Email
+claim.title=Title
+claim.gender=Gender
+claim.dob=Date of birth
+claim.telephone=Telephone No
+claim.otherphone=Other Phone No
+claim.mobile=Mobile No
+claim.streetaddress=Street Address
+claim.locality=Locality
+claim.region=Region
+claim.postalcode=Postal Code
+claim.country=Country
+claim.role=Role
+claim.organization=Organization
+claim.resourceType=Resource Type
+claim.createdDate=Created Date
+claim.lastModifiedDate=Last Modified Date
+claim.location=Location
+claim.version=Version
+footer.content=WSO2 Identity Server v6.0.0
+no-applications.header=No Applications Found!
+no-applications.body=There are no applications registered for the user.
+applications.breadcrumb=Home
+applications.header = Applications
+placeholder.username = e.g.johndoe
+placeholder.givenname = e.g.John
+placeholder.lastname = e.g.Doe
+placeholder.email = e.g.user@example.com
