No application message change

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -324,7 +324,7 @@ claim.location=Location
 claim.version=Version
 footer.content=WSO2 Identity Server v6.0.0
 no-applications.header=No Applications Found!
-no-applications.body=There are no applications registered for the user.
+no-applications.body=There are no applications registered for the you.
 applications.breadcrumb=Home
 applications.header = Applications
 placeholder.username = e.g.johndoe
