Change tab title when switching from one profile to another

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -34,7 +34,7 @@ password.validation.info5=one uppercase letter
 password.validation.info6=Atleast one special character
 password.info.header=Password required
 password.info.body= In order to update your password, you must enter your current password.
-profile=User Profile
+profile=Profile
 profile.success=Success!
 profile.failure=Failure!
 profile.username=Username
