update page title with i18n

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -1,3 +1,4 @@
+app.name=Identity Server User Portal
 welcome=Welcome to Identity Server User Portal
 welcome.msg=Manage your user profile
 login=Sign in to your account
