--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -90,3 +90,5 @@ placeholder.username = e.g.johndoe
 placeholder.givenname = e.g.John
 placeholder.lastname = e.g.Doe
 placeholder.email = e.g.user@example.com
+modal.delete.header= Are you sure you want to delete ?
+modal.delete.security.question.content = Are you sure you want to delete the selected security question?
