formatting userportal code

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -107,9 +107,12 @@ next=Next
 password.recovery.with.security.questions=Recover with security question
 try.with.another.username=Try with another username
 enter.your.username=Enter your username
-multiple.users.found=There are multiple users in the system with the provided username.Please provide domain specific username
-not.found.for.username=No user is found in the system for the provided username
+multiple.users.found=There are multiple users in the system with the provided username.Please provide domain specific\
+   username
+user.not.found.for.username=No user is found in the system for the provided username
 recovery.not.enabled=User Password recovery Options are not enabled. Please contact a system Administrator.
 something.wrong.error=Sorry, Something Went Wrong. We're working on getting this fixed as soon as we can.
 page.under.construction=Page Under Construction
 recovery.email.completed=An Email has been sent to your email address. Please check your inbox.
+no.recovery.questions.answered=You have not answered any security questions. Please contact system administrator to \
+  recover  your password
