--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -1,3 +1,4 @@
+app.name=Identity Server User Portal
 welcome=Welcome to Identity Server User Portal
 welcome.msg=Manage your user profile
 login=Sign in to your account
@@ -90,5 +91,29 @@ placeholder.username = e.g.johndoe
 placeholder.givenname = e.g.John
 placeholder.lastname = e.g.Doe
 placeholder.email = e.g.user@example.com
+forgot.password=Forgot Password
+password.recovery=Recover Password
+password.recovery.for=Recover Password for
+password.recovery.error=Password Recovery Error!
+password.recovery.select.options=Please select a method to recover your password
+password.recovery.with.email=Recover with e-mail
+captcha=Captcha:
+recover=Recover
+cancel=Cancel
+question=Question:
+answer=Answer:
+next=Next
+password.recovery.with.security.questions=Recover with security question
+try.with.another.username=Try with another username
+enter.your.username=Enter your username
+multiple.users.found=There are multiple users in the system with the provided username.Please provide domain specific\
+   username
+user.not.found.for.username=No user is found in the system for the provided username
+recovery.not.enabled=User Password recovery Options are not enabled. Please contact a system Administrator.
+something.wrong.error=Sorry, Something Went Wrong. We're working on getting this fixed as soon as we can.
+page.under.construction=Page Under Construction
+recovery.email.completed=An Email has been sent to your email address. Please check your inbox.
+no.recovery.questions.answered=You have not answered any security questions. Please contact system administrator to \
+  recover  your password
 modal.delete.header= Are you sure you want to delete ?
 modal.delete.security.question.content = Are you sure you want to delete the selected security question?
