refactoring error meaages

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -118,3 +118,4 @@ no.recovery.questions.answered=You have not answered any security questions. Ple
 modal.delete.header= Are you sure you want to delete ?
 modal.delete.security.question.content = Are you sure you want to delete the selected security question?
 http.status=Http Status
+contact.system.admin=Please contact system administrator for more information.
