Update UI components based on Markup changes

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -93,6 +93,8 @@ placeholder.lastname = e.g.Doe
 placeholder.email = e.g.user@example.com
 forgot.password=Forgot Password
 password.recovery=Recover Password
+forgot.your=Forgot your
+or=or
 password.recovery.for=Recover Password for
 password.recovery.error=Password Recovery Error!
 password.recovery.select.options=Please select a method to recover your password
@@ -105,11 +107,11 @@ answer=Answer:
 next=Next
 password.recovery.with.security.questions=Recover with security question
 try.with.another.username=Try with another username
-enter.your.username=Enter your username
+enter.your.username=Please enter your username to continue.
 multiple.users.found=There are multiple users in the system with the provided username.Please provide domain specific\
    username
 user.not.found.for.username=No user is found in the system for the provided username
-recovery.not.enabled=User Password recovery Options are not enabled. Please contact a system Administrator.
+recovery.not.enabled=Please contact an administrator to recover your password.
 something.wrong.error=Sorry, Something Went Wrong. We're working on getting this fixed as soon as we can.
 page.under.construction=Page Under Construction
 recovery.email.completed=An Email has been sent to your email address. Please check your inbox.
@@ -119,3 +121,7 @@ modal.delete.header= Are you sure you want to delete ?
 modal.delete.security.question.content = Are you sure you want to delete the selected security question?
 http.status=Http Status
 contact.system.admin=Please contact system administrator for more information.
+username=Username
+password=Password
+continue=Continue
+back.to.sign.in=Back to sign in
