--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -123,5 +123,6 @@ http.status=Http Status
 contact.system.admin=Please contact system administrator for more information.
 username=Username
 password=Password
+domain=Domain
 continue=Continue
 back.to.sign.in=Back to sign in
