--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -93,6 +93,7 @@ placeholder.lastname = e.g.Doe
 placeholder.email = e.g.user@example.com
 forgot.password=Forgot Password
 password.recovery=Recover Password
+reset.password=Reset Password
 forgot.your=Forgot your
 or=or
 password.recovery.for=Recover Password for
@@ -125,3 +126,4 @@ username=Username
 password=Password
 continue=Continue
 back.to.sign.in=Back to sign in
+select.new.password=Select your new password and enter it below.
