--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -127,3 +127,5 @@ password=Password
 continue=Continue
 back.to.sign.in=Back to sign in
 select.new.password=Select your new password and enter it below.
+recovery.username.completed=An Email has been sent to your email address with username. Please check your inbox.
+username.recovery=Username Recovery
