--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -91,7 +91,8 @@ placeholder.username = e.g.johndoe
 placeholder.givenname = e.g.John
 placeholder.lastname = e.g.Doe
 placeholder.email = e.g.user@example.com
-forgot.password=Forgot Password
+forgot.password=Password
+forgot.username=Username
 password.recovery=Recover Password
 reset.password=Reset Password
 forgot.your=Forgot your
@@ -100,6 +101,9 @@ password.recovery.for=Recover Password for
 password.recovery.error=Password Recovery Error!
 password.recovery.select.options=Please select a method to recover your password
 password.recovery.with.email=Recover with e-mail
+username.recovery=Recover Username
+username.recovery.for=Recover Username for
+username.recovery.error=Username Recovery Error!
 captcha=Captcha:
 recover=Recover
 cancel=Cancel
