--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -22,6 +22,8 @@ signup.domain.placeholder=select a user store domain
 signup.error.retrieve.claim=Failed to retrieve the claim profile.
 signup.error.retrieve.domain=Failed to retrieve the domain names.
 signup.error.registration=User Sign Up failure.
+signup.error.user.exist=Failed to check for the user existence.
+signup.error.user.exist.message=Username is already taken. Please use a different name.
 password.reset=Update Password
 password.reset.old=Current Password
 password.reset.new=New Password
