Enable security question based password recovery

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -132,3 +132,7 @@ recovery.username.completed=An Email has been sent to your email address with us
 username.recovery=Username Recovery
 click.here=Click Here
 password.recovery.external.option=Other
+error.20008=Invalid Answer(s) Provided for the Security question(s)
+error.18001=Invalid code provided with the recovery request
+error.18002=Expired code provided with the recovery request
+code=Code
