IDENTITY-5725 fix Login Page error message should  be changed when user didin't enter a user name or a password.

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -8,6 +8,7 @@ login.error.default=Login Error!
 login.rememberMe=Keep me signed in
 login.error.invalid.username=You have provided an invalid Username.
 login.error.authentication=Provided user name or password is invalid.
+login.error.empty.authentication=Please provide a user name and a password for login.
 signup.title=Sign up
 signup.sub.title=Please fill in the below form to sign up to user portal
 signup.message=Don't have an account?
