IDENTITY-5708 add password page to security questions section

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -65,7 +65,8 @@ security.question.label.add=Add
 security.question.label.password=Password
 security.question.label.update=Update
 security.question.label.cancel=Cancel
-security.question.info.body= In order to update question, you must enter your current password.
+security.question.label.continue=Continue
+security.question.info.body= Please enter your password to continue
 security.question.error.getChallengeQuestionsForUser=Failed to retrieve all the answered challenge questions.
 security.question.error.getChallengeQuestionList=Failed to retrieve all of the available challenge questions.
 security.question.error.setChallengeAnswer=Failed to add/update the challenge question.
