Implementation of username recovery feature

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -101,9 +101,9 @@ password.recovery.for=Recover Password for
 password.recovery.error=Password Recovery Error!
 password.recovery.select.options=Please select a method to recover your password
 password.recovery.with.email=Recover with e-mail
-username.recovery=Recover Username
 username.recovery.for=Recover Username for
 username.recovery.error=Username Recovery Error!
+username.error.invalid.username=Sorry!. No Such User Available!
 captcha=Captcha:
 recover=Recover
 cancel=Cancel
