Resolved PR comments

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -140,3 +140,6 @@ error.20008=Invalid Answer(s) Provided for the Security question(s)
 error.18001=Invalid code provided with the recovery request
 error.18002=Expired code provided with the recovery request
 code=Code
+back.sign.in=Back to sign in
+recover.username=Recover Username
+fill.below.to.recover=Please fill in the below form to recover your username
