IDENTITY-5653 fix Can't delete security questions

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -70,7 +70,8 @@ security.question.info.body= Please enter your password to continue
 security.question.error.getChallengeQuestionsForUser=Failed to retrieve all the answered challenge questions.
 security.question.error.getChallengeQuestionList=Failed to retrieve all of the available challenge questions.
 security.question.error.setChallengeAnswer=Failed to add/update the challenge question.
-security.question.error.deleteQuestion=Failed to delete the challenge question.
+security.question.error.deleteQuestion=Failed to delete the challenge question.\
+  You cannot delete the minimum number of questions allowed.
 security.question.error.invalidPassword=Provided password is invalid.
 security.question.success.setChallengeAnswer=Successfully add/update the challenge question.
 security.question.success.deleteQuestion=Successfully delete the challenge question.
