Implementation of Username Recovery feature. (#1130)
* Username recovery working feature

* Implementation of username recovery feature

* Resolved conflicts to build with master

* Resolve conflicts with master

* Resolved conflicts

* Resolved PR comments

* Resolved PR comments

* Resolved PR Comments

* Resolved PR Comments

* Resolved PR Comments

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -91,7 +91,8 @@ placeholder.username = e.g.johndoe
 placeholder.givenname = e.g.John
 placeholder.lastname = e.g.Doe
 placeholder.email = e.g.user@example.com
-forgot.password=Forgot Password
+forgot.password=Password
+forgot.username=Username
 password.recovery=Recover Password
 reset.password=Reset Password
 forgot.your=Forgot your
@@ -100,6 +101,9 @@ password.recovery.for=Recover Password for
 password.recovery.error=Password Recovery Error!
 password.recovery.select.options=Please select a method to recover your password
 password.recovery.with.email=Recover with e-mail
+username.recovery.for=Recover Username for
+username.recovery.error=Username Recovery Error!
+username.error.invalid.username=Sorry!. No Such User Available!
 captcha=Captcha:
 recover=Recover
 cancel=Cancel
@@ -136,3 +140,6 @@ error.20008=Invalid Answer(s) Provided for the Security question(s)
 error.18001=Invalid code provided with the recovery request
 error.18002=Expired code provided with the recovery request
 code=Code
+back.sign.in=Back to sign in
+recover.username=Recover Username
+fill.below.to.recover=Please fill in the below form to recover your username
