add support for adding more challenge questions

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -77,6 +77,8 @@ security.question.error.deleteQuestion=Failed to delete the challenge question.\
 security.question.error.invalidPassword=Provided password is invalid.
 security.question.error.getMinimumNoOfChallengeQuestionsToAnswer=Error in retrieving minimum number of security \
   questions.
+security.question.error.hasAnsweredQuestions=Error while checking already added user answers.
+security.question.error.getRemainingQuestions=Error in retrieving remaining challenge questions.
 security.question.success.setChallengeAnswer=Successfully add/update the challenge question.
 security.question.success.deleteQuestion=Successfully delete the challenge question.
 claim.username=Username
