Update success messages for security question add and update

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -79,7 +79,8 @@ security.question.error.getMinimumNoOfChallengeQuestionsToAnswer=Error in retrie
   questions.
 security.question.error.hasAnsweredQuestions=Error while checking already added user answers.
 security.question.error.getRemainingQuestions=Error in retrieving remaining challenge questions.
-security.question.success.setChallengeAnswer=Successfully add/update the challenge question.
+security.question.success.setChallengeAnswer.add=Successfully added the challenge question/s.
+security.question.success.setChallengeAnswer.update=Successfully updated the challenge question/s.
 security.question.success.deleteQuestion=Successfully delete the challenge question.
 claim.username=Username
 claim.fullname=Full Name
