--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -12,3 +12,10 @@ login.error.authentication=Provided user name or password is invalid.
 login.error.empty.authentication=Please provide a user name and a password for login.
 username=Username
 password=Password
+applications.breadcrumb=Home
+applications.header = Applications
+no-applications.header=No Applications Found!
+no-applications.body=There are no applications registered for you.
+applications.users.header=Users
+no-users.header=No users created yet.
+no-users.body=Click one of the buttons below to get started.
