Initial page for user groups.

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -19,3 +19,6 @@ no-applications.body=There are no applications registered for you.
 applications.users.header=Users
 no-users.header=No users created yet.
 no-users.body=Click one of the buttons below to get started.
+applications.groups.header=Groups
+no-groups.header=No groups created yet.
+no-groups.body=Click one of the buttons below to get started.
