Add user add page initial ui

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -22,3 +22,13 @@ no-users.body=Click one of the buttons below to get started.
 applications.groups.header=Groups
 no-groups.header=No groups created yet.
 no-groups.body=Click one of the buttons below to get started.
+users.add.header=Add User
+users.add.domain=Domain
+users.add.username=Username
+users.add.selectMethod=Select method
+users.add.select.with.password=With password
+users.add.select.with.email.and.askPassword=With email verification and ask password from user
+users.add.select.with.otp.and.askPassword=With OTP and ask password from user
+users.add.select.with.email.or.phone=With email/phone verification
+users.add.password=Password
+users.confirm.password=Confirm Password
