Add basic UI for Forced password reset. Refer the wireframe [https://github.com/wso2-dev-ux/product-is/blob/master/Wireframes/admin-portal/v3/3.32%20%20Reset%20password%20with%20offline%20OTP%20-%20password%20generated.png]

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -32,3 +32,9 @@ users.add.select.with.otp.and.askPassword=With OTP and ask password from user
 users.add.select.with.email.or.phone=With email/phone verification
 users.add.password=Password
 users.confirm.password=Confirm Password
+recovery.reset.password=Reset Password
+recovery.reset.selectMethod=Select password reset method
+recovery.reset.select.with.offline.OTP=With offline OTP
+recovery.reset.select.with.email.OTP=With email OTP
+recovery.reset.select.with.reset.link=With reset link
+recovery.reset.password.new=New password
