--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -34,7 +34,7 @@ users.add.password=Password
 users.confirm.password=Confirm Password
 recovery.reset.password=Reset Password
 recovery.reset.selectMethod=Select password reset method
-recovery.reset.select.with.offline.OTP=With offline OTP
-recovery.reset.select.with.email.OTP=With email OTP
-recovery.reset.select.with.reset.link=With reset link
+recovery.reset.select.with.offline.OTP=Via Offline OTP
+recovery.reset.select.with.email.OTP=Via Email OTP
+recovery.reset.select.with.reset.link=Via Reset Link
 recovery.reset.password.new=New password
