user list initial commit

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -32,3 +32,8 @@ users.add.select.with.otp.and.askPassword=With OTP and ask password from user
 users.add.select.with.email.or.phone=With email/phone verification
 users.add.password=Password
 users.confirm.password=Confirm Password
+users.list.status=Status
+list.actions=Actions
+users.list.username=Username
+users.list.Groups=Groups
+users.list.roles=Roles
