single profile load

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -30,5 +30,9 @@ users.add.select.with.password=With password
 users.add.select.with.email.and.askPassword=With email verification and ask password from user
 users.add.select.with.otp.and.askPassword=With OTP and ask password from user
 users.add.select.with.email.or.phone=With email/phone verification
+profile=Profile
 users.add.password=Password
 users.confirm.password=Confirm Password
+update.header=Update User
+user.profile.update.error=Error occured when updating user profile
+save=Save
