--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -32,3 +32,4 @@ users.add.select.with.otp.and.askPassword=With OTP and ask password from user
 users.add.select.with.email.or.phone=With email/phone verification
 users.add.password=Password
 users.confirm.password=Confirm Password
+user.add.error=Error while adding user.
