Added update profile

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -36,3 +36,4 @@ users.confirm.password=Confirm Password
 update.header=Update User
 user.profile.update.error=Error occured when updating user profile
 save=Save
+update=Update
