Add user existence validation from UI

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -33,3 +33,4 @@ users.add.select.with.email.or.phone=With email/phone verification
 users.add.password=Password
 users.confirm.password=Confirm Password
 user.add.error=Error while adding user.
+user.add.exist.error.message=Username is already taken. Please use a different name.
