--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -32,12 +32,13 @@ users.add.select.with.otp.and.askPassword=With OTP and ask password from user
 users.add.select.with.email.or.phone=With email/phone verification
 users.add.password=Password
 users.confirm.password=Confirm Password
-group.add.header=Add Group
+groups.add.header=Add Group
 go.back=Go Back
 identity.store=Identity Store
 groups.name=Name
 groups.description=Description
 groups.add.button=Add Group
+groups.add.domain=Add Group
 groups.general=General
 groups.users=Users
 groups.roles=Roles
