add validations, comments and edit page.

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -33,15 +33,19 @@ users.add.select.with.email.or.phone=With email/phone verification
 users.add.password=Password
 users.confirm.password=Confirm Password
 groups.add.header=Add Group
+groups.edit.header=Edit Group
 go.back=Go Back
 identity.store=Identity Store
 groups.name=Name
 groups.description=Description
 groups.add.button=Add Group
-groups.add.domain=Add Group
+groups.add.domain=Identity Store
+group.add.error=Error while adding group.
+group.edit.error=Error while editing group.
 groups.general=General
 groups.users=Users
 groups.roles=Roles
+group.add.exist.error.message=Group name is already taken. Please use a different name.
 users.list.status=Status
 list.actions=Actions
 users.list.username=Username
