--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -35,5 +35,15 @@ users.confirm.password=Confirm Password
 users.list.status=Status
 list.actions=Actions
 users.list.username=Username
-users.list.Groups=Groups
+users.list.groups=Groups
 users.list.roles=Roles
+add.user.navbar=Add User
+import.user.navbar=Import Users
+option.select.claim=Select claim..
+bulk.action.delete=Delete Selected
+bulk.action.disable=Disable Selected
+bulk.action.lock=Lock Selected
+bulk.action.activate=Activate Selected
+but.action.edit=Edit Selected
+bulk.action.confirm=You about perform a bulk operation, please confirm to proceed.
+bulk.action.save=Save Changes
