Adding proper error handling.

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -34,6 +34,10 @@ users.add.password=Password
 users.confirm.password=Confirm Password
 groups.add.header=Add Group
 groups.edit.header=Edit Group
+group.edit.button=Update
+group.added.successfully.default=Group added successfully.
+group.updated.successfully.default=Group updated successfully.
+group.update.error.default=Error occurred while updating group.
 go.back=Go Back
 identity.store=Identity Store
 groups.name=Name
@@ -46,10 +50,13 @@ groups.general=General
 groups.users=Users
 groups.roles=Roles
 group.add.exist.error.message=Group name is already taken. Please use a different name.
+group.add.error.default=Group Adding Error!
+group.update.error=Error occurred updating the group.
 users.list.status=Status
 list.actions=Actions
 users.list.username=Username
 users.list.Groups=Groups
 users.list.roles=Roles
 user.add.error=Error while adding user.
+user.update.error=Error while updating user.
 user.add.exist.error.message=Username is already taken. Please use a different name.
