Completed update user scenario

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -37,3 +37,5 @@ update.header=Update User
 user.profile.update.error=Error occured when updating user profile
 save=Save
 update=Update
+profile.success=Successfully updated the profile!
+profile.failure=An Error occured when updating the profile!
