--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -39,3 +39,7 @@ save=Save
 update=Update
 profile.success=Successfully updated the profile!
 profile.failure=An Error occured when updating the profile!
+profile.updated=Your profile is updated.
+invalid.profile.name=Invalid profile name.
+profile.image.loaded=Profile image is loaded
+account.locked=Account is locked till user verify.
