Added common modules

--- a/portal/apps/org.wso2.carbon.iam.portal.common/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.portal.common/src/main/lang/en_US.properties
@@ -1,3 +1,7 @@
+profile.image.updated=Profile image successfully updated
+profile=Profile
+users.add.password=Password
+users.confirm.password=Confirm Password
 update.header=Update User
 user.profile.update.error=Error occured when updating user profile
 save=Save
@@ -8,4 +12,3 @@ profile.updated=Your profile is updated.
 invalid.profile.name=Invalid profile name.
 profile.image.loaded=Profile image is loaded
 account.locked=Account is locked till user verify.
-profile.image.updated=Profile image successfully updated
