--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -34,3 +34,9 @@ users.add.password=Password
 users.confirm.password=Confirm Password
 user.add.error=Error while adding user.
 user.add.exist.error.message=Username is already taken. Please use a different name.
+user.add.failure=Failure!
+user.add.success.message=You have Succesfully added the user
+user.add.success=Success!
+user.add.error.retrieve.domain=Failed to retrieve the domain names.
+user.add.error.retrieve.primary.domain=Failed to retrieve the primary domain name.
+user.add.password.validate.error=Invalid Password.Please adhere to the password policy guidelines
