--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -32,3 +32,25 @@ users.add.select.with.otp.and.askPassword=With OTP and ask password from user
 users.add.select.with.email.or.phone=With email/phone verification
 users.add.password=Password
 users.confirm.password=Confirm Password
+users.list.status=Status
+list.actions=Actions
+users.list.username=Username
+users.list.groups=Groups
+users.list.roles=Roles
+add.user.navbar=Add User
+import.user.navbar=Import Users
+option.select.claim=Select claim..
+bulk.action.delete=Delete Selected
+bulk.action.disable=Disable Selected
+bulk.action.lock=Lock Selected
+bulk.action.activate=Activate Selected
+but.action.edit=Edit Selected
+bulk.action.confirm=You about perform a bulk operation, please confirm to proceed.
+bulk.action.save=Save Changes
+group.modal.heading=Groups of
+recovery.reset.password=Reset Password
+recovery.reset.selectMethod=Select password reset method
+recovery.reset.select.with.offline.passcode=Via Offline Pass Code
+recovery.reset.select.with.email.OTP=Via Email OTP
+recovery.reset.select.with.reset.link=Via Reset Link
+recovery.reset.password.new=New password
