--- a/portal/apps/org.wso2.carbon.iam.portal.common/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.portal.common/src/main/lang/en_US.properties
@@ -11,4 +11,4 @@ profile.failure=An Error occured when updating the profile!
 profile.updated=Your profile is updated.
 invalid.profile.name=Invalid profile name.
 profile.image.loaded=Profile image is loaded
-account.locked=Account is locked till user verify.
+account.locked=Account is locked.
