UI changes after review

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -40,11 +40,11 @@ users.list.roles=Roles
 add.user.navbar=Add User
 import.user.navbar=Import Users
 option.select.claim=Select claim..
-bulk.action.delete=Delete Selected
-bulk.action.disable=Disable Selected
-bulk.action.lock=Lock Selected
-bulk.action.activate=Activate Selected
-but.action.edit=Edit Selected
+bulk.action.delete=Delete
+bulk.action.disable=Disable
+bulk.action.lock=Lock
+bulk.action.activate=Activate
+bulk.action.edit=Edit
 bulk.action.confirm=You about perform a bulk operation, please confirm to proceed.
 bulk.action.save=Save Changes
 group.modal.heading=Groups of
@@ -54,9 +54,4 @@ recovery.reset.select.with.offline.passcode=Via Offline Pass Code
 recovery.reset.select.with.email.OTP=Via Email OTP
 recovery.reset.select.with.reset.link=Via Reset Link
 recovery.reset.password.new=New password
-recovery.reset.password=Reset Password
-recovery.reset.selectMethod=Select password reset method
-recovery.reset.select.with.offline.passcode=Via Offline Pass Code
-recovery.reset.select.with.email.OTP=Via Email OTP
-recovery.reset.select.with.reset.link=Via Reset Link
-recovery.reset.password.new=New password
+modal.close=Close
