Accordian view adapted.

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -81,17 +81,15 @@ groups.add.button=Add Group
 groups.add.domain=Identity Store
 group.add.error=Error while adding group.
 group.edit.error=Error while editing group.
-groups.general=General
+groups.general.details=General Details
+assign.users=Assign Users
+assign.roles=Assign Roles
 groups.users=Users
 groups.roles=Roles
 group.add.exist.error.message=Group name is already taken. Please use a different name.
 group.add.error.default=Group Adding Error!
 group.update.error=Error occurred updating the group.
-users.list.status=Status
-list.actions=Actions
-users.list.username=Username
 users.list.Groups=Groups
-users.list.roles=Roles
 user.add.error=Error while adding user.
 user.update.error=Error while updating user.
 user.add.exist.error.message=Username is already taken. Please use a different name.
