--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -78,7 +78,13 @@ identity.store=Identity Store
 groups.name=Name
 groups.description=Description
 groups.add.button=Add Group
+group.error.retrieve.claim=Claim retrieval error for claims.
+group.add.no.content=No claim available for group.
 groups.add.domain=Identity Store
+group.claim.groupname=Group Name
+group.claim.groupdescription=Group Description
+group.placeholder.groupname=Name of the Group
+group.placeholder.groupdescription=Describe the intention of the group.
 group.add.error=Error while adding group.
 group.edit.error=Error while editing group.
 groups.general.details=General Details
